2004-09-03  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-(i386|ppc)/system.h (__xnlock_get_irqsave):
	Avoid to enable interrupts in nested critical sections.

2004-09-01  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/hal.c: Use standard PIT_xx defines instead of
	immediate port values.

 	* RELEASE: fusion-0.5

2004-09-01  Philippe Gerum  <rpm@xenomai.org>

	* fusion: Get rid of CONFIG_RTAI_HW_NRCPUS and use the
	Linux-defined constant instead.

	* arch/ppc/patches: Update Adeos support to 2.6.8rc1-r6c5.

	* include/nucleus/asm-ppc/atomic.h: Fix register notations in
	inline assembly.

	* arch/*/defconfig: Rebuild sane defconfigs.

	* nucleus/pod.c (xnpod_calibration_thread): Calibrate during 0.3s
	regardless of the calibration period. Also provide for adjusting
	the estimated average jitter on a per-architecture basis.

	* nucleus/timer.c (xntimer_do_timers): Refresh the tested clock
	value in aperiodic mode after each timer processing loop.

	* arch/*/hal/hal.c (rthal_set_irq_affinity): Replace reset action
	by returning the old cpumask.

2004-08-31  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_calibrate_sched): Straighten error path.
	(xnpod_calibrate_sched): Disable autocalibration of the scheduling
	latency for architectures that do not provide an aperiodic timing
	source.

	* nucleus/module.c (__xeno_main_init): Straighten error path.

2004-08-30  Philippe Gerum  <rpm@xenomai.org>

	* nucleus: Define CONFIG_RTAI_HW_APERIODIC_TIMER.

	* nucleus/timer.c (xntimer_enqueue): Completely dissociate
	periodic from aperiodic timer enqueueing/dequeueing.

2004-08-30  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* arch/ppc/hal/hal.c: Move the Doxygen documentation to a new
	group, 	hal_ppc, in order to avoid clash (and doxygen warnings)
	with x86 documentation.

2004-08-29  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/pod.c (xnpod_migrate): Initial implementation of a